@startuml diagrama_banco_dados
!theme plain
title Modelo Físico do Banco de Dados - Implementação Validada
hide circle
skinparam linetype ortho

entity users {
  * id : SERIAL <<PK>>
  --
  * name : VARCHAR(255)
  * email : VARCHAR(255) <<UNIQUE>>
  * password : VARCHAR(255)
  * type : user_type
  vehicle : VARCHAR(255)
  created_at : TIMESTAMPTZ
  updated_at : TIMESTAMPTZ
  deleted_at : TIMESTAMPTZ
}
entity products {
  * id : SERIAL <<PK>>
  --
  * name : VARCHAR(255)
  description : TEXT
  * price : DECIMAL(10,2)
  image_url : VARCHAR(500)
  created_at : TIMESTAMPTZ
  updated_at : TIMESTAMPTZ
  deleted_at : TIMESTAMPTZ
}
entity orders {
  * id : SERIAL <<PK>>
  --
  * customer_id : INTEGER <<FK>>
  delivery_id : INTEGER <<FK>>
  * status : order_status
  * total : DECIMAL(10,2)
  * address : TEXT
  created_at : TIMESTAMPTZ
  updated_at : TIMESTAMPTZ
  deleted_at : TIMESTAMPTZ
}
entity order_items {
  * id : SERIAL <<PK>>
  --
  * order_id : INTEGER <<FK>>
  * product_id : INTEGER <<FK>>
  * quantity : INTEGER
  * price : DECIMAL(10,2)
  created_at : TIMESTAMPTZ
  updated_at : TIMESTAMPTZ
  deleted_at : TIMESTAMPTZ
}
entity notifications {
  * id : SERIAL <<PK>>
  --
  * user_id : INTEGER <<FK>>
  order_id : INTEGER <<FK>>
  * type : notification_type
  * title : VARCHAR(255)
  * message : TEXT
  is_read : BOOLEAN
  created_at : TIMESTAMPTZ
  updated_at : TIMESTAMPTZ
}
users ||--o{ orders : customer_id
users ||--o{ orders : delivery_id
users ||--o{ notifications : user_id
orders ||--o{ order_items : order_id
products ||--o{ order_items : product_id
orders ||--o{ notifications : order_id
note right of users
user_type: customer, delivery, admin
Entregador exige vehicle.
end note
note right of orders
order_status: pending, preparing, ready,
delivering, delivered.
end note
@enduml
